
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned long KERNEL_BASE ;
 scalar_t__ kernel_ofs_phys ;

unsigned long virt2phys(unsigned long addr)
{
  unsigned long phys;
  addr &= ~KERNEL_BASE;
  addr += kernel_ofs_phys;
  phys = addr & 0xffffffff;
  return phys;
}
